[gd_scene load_steps=6 format=2]

[ext_resource path="res://nodes/gameplay/Gameplay.gd" type="Script" id=1]
[ext_resource path="res://nodes/gameplay/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/art/gameover.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/art/House In a Forest Loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://nodes/gameplay/EnemySpawner.tscn" type="PackedScene" id=6]

[node name="Gameplay" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.329412, 0.498039, 0.0627451, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
start_position_path = NodePath("../StartPosition")

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="EnemySpawner" parent="." instance=ExtResource( 6 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="game_started" from="." to="Player" method="_on_Gameplay_game_started"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
